objects/Time_Log__c.object
<CustomObject>
    <fields>
        <fullName>Break_1_Duration__c</fullName>
        <formula>(( Break_1_End_Time__c  -  Break_1_Start_Time__c )*24)*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Break 1 Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Break_1_End_Time__c</fullName>
        <inlineHelpText>updated by the system</inlineHelpText>
        <label>Break 1 End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Break_1_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Break 1 End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Break_1_Start_Time__c</fullName>
        <inlineHelpText>updated by the system</inlineHelpText>
        <label>Break 1 Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Break_1_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Break 1 Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Break_2_Duration__c</fullName>
        <formula>(( Break_2_End_Time__c - Break_2_Start_Time__c )*24)*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Break 2 Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Break_2_End_Time__c</fullName>
        <inlineHelpText>defaulted by the system</inlineHelpText>
        <label>Break 2 End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Break_2_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Break 2 End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Break_2_Start_Time__c</fullName>
        <inlineHelpText>defaulted by the system</inlineHelpText>
        <label>Break 2 Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Break_2_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Break 2 Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>VS_Employee__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Alias__c</fullName>
        <formula>VS_Employee__r.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Department__c</fullName>
        <formula>VS_Employee__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <formula>VS_Employee__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee ID#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Manager_Email__c</fullName>
        <label>Employee Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Manager__c</fullName>
        <formula>VS_Employee__r.Reports_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Role__c</fullName>
        <formula>VS_Employee__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IMAGE( 
CASE(  Status__c , 
&quot;Not Logged In&quot;, &quot;/img/samples/color_red.gif&quot;, 
&quot;Logged In&quot;, &quot;/img/samples/color_green.gif&quot;, 
&quot;At Break 1&quot;, &quot;/img/samples/color_yellow.gif&quot;, 
&quot;At Break 2&quot;, &quot;/img/samples/color_yellow.gif&quot;,
&quot;At Lunch&quot;, &quot;/img/samples/color_yellow.gif&quot;,
&quot;Logged Out&quot;, &quot;/img/samples/color_red.gif&quot;,
&quot;/s.gif&quot;), 
&quot;Unknown&quot;, 20,20)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green = Logged In, Red= Logged Out, Yellow = on break, at lunch</inlineHelpText>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_IP_Address__c</fullName>
        <label>Login IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Time__c</fullName>
        <label>Login Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>checking the box will set your Start Date and Time</inlineHelpText>
        <label>Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logout_IP_Address__c</fullName>
        <label>Logout IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logout_Time__c</fullName>
        <inlineHelpText>workflow sets the date and time the user check the Logout radio button</inlineHelpText>
        <label>Logout Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lunch_Duration__c</fullName>
        <formula>( Lunch_End_Time__c - Lunch_Start_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lunch Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lunch_End_Time__c</fullName>
        <inlineHelpText>updated by the system</inlineHelpText>
        <label>Lunch End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lunch_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lunch End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lunch_Start_Time__c</fullName>
        <inlineHelpText>updated by the system</inlineHelpText>
        <label>Lunch Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lunch_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lunch Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>only Manager&apos;s can update this field</inlineHelpText>
        <label>Manager Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payroll_Status__c</fullName>
        <formula>IF(VS_Employee__r.Hourly_Employee__c, &quot;YES&quot;, &quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hourly Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not logged in</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>At Break 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Break 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logged In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logged Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Saturday Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traveling for Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid Time Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Log_Date__c</fullName>
        <inlineHelpText>enter the date you are logging time for</inlineHelpText>
        <label>Time Log Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Log_Day__c</fullName>
        <formula>CASE( MOD(Time_Log_Date__c - DATE(1900, 1, 7), 7), 
0, &quot;Sunday&quot;, 
1, &quot;Monday&quot;, 
2, &quot;Tuesday&quot;, 
3, &quot;Wednesday&quot;, 
4, &quot;Thursday&quot;, 
5, &quot;Friday&quot;, 
6, &quot;Saturday&quot;, 
&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Log Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Log_Ignore__c</fullName>
        <formula>IF( VS_Employee__r.Auto_Time_Log_Ignore__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Log Ignore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>(Logout_Time__c - Login_Time__c)*24-( Lunch_Duration__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculated by taking the difference between the login and logout time less the lunch duration field</inlineHelpText>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <formula>VS_Employee__r.Username</formula>
        <inlineHelpText>formula field that reads the username from the user profile</inlineHelpText>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VS_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VS Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Versus_Today_s_Schedule__c</fullName>
        <formula>IF(
   Time_Log_Day__c = &quot;Monday&quot;, 
   Total_Hours__c -  VS_Employee__r.Monday_Scheduled_Hour_Count__c,
   IF(
      Time_Log_Day__c = &quot;Tuesday&quot;, 
      Total_Hours__c -  VS_Employee__r.Tuesday_Scheduled_Hour_Count__c,
      IF(
         Time_Log_Day__c = &quot;Wednesday&quot;, 
         Total_Hours__c -  VS_Employee__r.Wednesday_Scheduled_Hour_Count__c,
         IF(
            Time_Log_Day__c = &quot;Thursday&quot;, 
            Total_Hours__c -  VS_Employee__r.Thursday__c ,
            IF(
               Time_Log_Day__c = &quot;Friday&quot;, 
               Total_Hours__c -  VS_Employee__r.Friday_Scheduled_Hour_Count__c,
               IF(
                  Time_Log_Day__c = &quot;Saturday&quot;, 
                  Total_Hours__c -  VS_Employee__r.Saturday_Scheduled_Hour_Count__c,
                  Total_Hours__c -  VS_Employee__r.Sunday_Scheduled_Hour_Count__c
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Versus Today&apos;s Schedule</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Time Log</label>
    <listViews>
        <fullName>ALL_Website_Support_WSS_Team</fullName>
        <columns>Employee_Department__c</columns>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Manager__c</field>
            <operation>contains</operation>
            <value>David Tinsley,Karen Kuzanek,Manasa Murakonda,Brian Gochenour</value>
        </filters>
        <label>ALL Website Support WSS Team</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Marketing_Account_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amanda_s_Time_Logs</fullName>
        <booleanFilter>1 AND 2 AND 3 and 4</booleanFilter>
        <columns>Time_Log_Date__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>NAME</columns>
        <columns>Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Alias__c</field>
            <operation>equals</operation>
            <value>akitc</value>
        </filters>
        <filters>
            <field>Created_By_Role__c</field>
            <operation>startsWith</operation>
            <value>HR Coordinator</value>
        </filters>
        <filters>
            <field>Employee_Role__c</field>
            <operation>notContain</operation>
            <value>dealer advocate</value>
        </filters>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>Amanda&apos;s Time Logs</label>
        <sharedTo>
            <role>HR_Coordinator</role>
            <role>HumanResourceManager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Chad_Hollins_View</fullName>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Login_IP_Address__c</columns>
        <columns>Logout_IP_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Department__c</field>
            <operation>equals</operation>
            <value>IMPLEMENTATION</value>
        </filters>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>Implementation - Prior 2 Weeks View</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Corporate_Trainer2</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DirectorofImplementation</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ImplementationTeamLead</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Integration_Team_Lead</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Manager_TLApprovals</fullName>
        <columns>NAME</columns>
        <columns>Manager_Approved__c</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manager_Approved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Employee_Department__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <filters>
            <field>Payroll_Status__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>IT Time Logs to Approve</label>
        <sharedTo>
            <role>DirectorofInsideSales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Integration_Prior_2_Weeks_View1</fullName>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Login_IP_Address__c</columns>
        <columns>Logout_IP_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Employee_Department__c</field>
            <operation>equals</operation>
            <value>INTEGRATION</value>
        </filters>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>Integration - Prior 2 Weeks View</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Corporate_Trainer2</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DirectorofImplementation</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ImplementationTeamLead</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Integration_Team_Lead</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_Integration</fullName>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Employee_Role__c</field>
            <operation>contains</operation>
            <value>integration,dms support</value>
        </filters>
        <label>Last Month-Integration</label>
        <sharedTo>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_Process_Marketing</fullName>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Employee_Department__c</field>
            <operation>equals</operation>
            <value>process marketing</value>
        </filters>
        <label>Last Month-Process Marketing</label>
        <sharedTo>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_Support</fullName>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Employee_Department__c</field>
            <operation>equals</operation>
            <value>Implementation</value>
        </filters>
        <label>Last Month-Implementation</label>
        <sharedTo>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_Support2</fullName>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Employee_Manager__c</field>
            <operation>equals</operation>
            <value>karen kuzanek,michael tigges,jamie faulkner</value>
        </filters>
        <label>Last Month-Support</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Director_of_Support</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_Support3</fullName>
        <booleanFilter>(1 AND 2) or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Employee_Manager__c</field>
            <operation>equals</operation>
            <value>jon beachner</value>
        </filters>
        <filters>
            <field>Employee_Alias__c</field>
            <operation>startsWith</operation>
            <value>emor</value>
        </filters>
        <label>Last Month-Performance Managers(West)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_Training</fullName>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Employee_Manager__c</field>
            <operation>equals</operation>
            <value>Greg Becker</value>
        </filters>
        <label>Last Month-Training</label>
        <sharedTo>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_VinPros_Central</fullName>
        <booleanFilter>1 AND 2 And 3</booleanFilter>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Created_By_Role__c</field>
            <operation>equals</operation>
            <value>Performance Manager,VinPro,Account Performance Assistant</value>
        </filters>
        <filters>
            <field>Employee_Manager__c</field>
            <operation>equals</operation>
            <value>Jon Beachner</value>
        </filters>
        <label>Last Month-Performance Managers(Central)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_Virtual_Trainers</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>greaterThan</operation>
            <value>7/1/2011</value>
        </filters>
        <filters>
            <field>Employee_Department__c</field>
            <operation>contains</operation>
            <value>Virtual</value>
        </filters>
        <label>2011-Virtual Trainers</label>
        <sharedTo>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_Website_Support</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <columns>Login_IP_Address__c</columns>
        <columns>Logout_IP_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Employee_Department__c</field>
            <operation>contains</operation>
            <value>Virtual</value>
        </filters>
        <label>Last Month-Virtual Trainers</label>
        <sharedTo>
            <roleAndSubordinatesInternal>sr_Dir_Training_Imp</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_Month_Website_Support_WSS_Team</fullName>
        <columns>Employee_Department__c</columns>
        <columns>NAME</columns>
        <columns>VS_Employee__c</columns>
        <columns>Status__c</columns>
        <columns>Flag__c</columns>
        <columns>Login_Time__c</columns>
        <columns>Logout_Time__c</columns>
        <columns>Total_Hours__c</columns>
        <columns>Lunch_Start_Time__c</columns>
        <columns>Lunch_End_Time__c</columns>
        <columns>Lunch_Duration__c</columns>
        <columns>Break_1_Start_Time__c</columns>
        <columns>Break_1_End_Time__c</columns>
        <columns>Break_2_Start_Time__c</columns>
        <columns>Break_2_End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Time_Log_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Employee_Manager__c</field>
            <operation>equals</operation>
            <value>Ryan Evans,Yvonne Morris,Matthew Piepho</value>
        </filters>
        <filters>
            <field>Employee_Department__c</field>
            <operation>notEqual</operation>
            <value>support</value>
        </filters>
        <label>Last Month-Website Support WSS Team</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>Marketing_Account_Manager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TL-{YYYY}{MM}-{0}</displayFormat>
        <label>Time Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>